fix: Spline 3d overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -293,6 +293,7 @@
 
  .parent {
      position: relative;
+     overflow-x: hidden;
  }
 
  .clockSpline {
